# Lab_work_17

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/:  remove_non_letters.h  balance_string.h  change_word_order.h  counter_palindrome_word.h  find_duplicate_words.h  find_last_common_word.h  find_preceding_word.h  find_with_the_same_letters_words.h  get_word_before_first_word_with_a.h  get_word_except_last.h  letters_belong_string.h  lexicographical_str.h  print_revers_ordered.h  remove_adjacent_equal_letters.h  remove_palindrome_word.h  replace_digit_to_space.h  replace_word_to_word.h  reverse_str.h  swap_words.h
